--- a/app/views/patient_cards/index.html.haml
+++ b/app/views/patient_cards/index.html.haml
@@ -23,6 +23,6 @@
         %td= patient.date_of_birth
         %td= patient.phone_number
         %td
-          = link_to 'Show', patient_card_path(patient), class: 'btn btn-primary btn-xs'
+          = link_to 'Umów wizytę',new_appointment_path(patient_card_id: patient.id), class: 'btn btn-primary btn-xs'
           = link_to 'Edytuj', edit_patient_card_path(patient), class: 'btn btn-warning btn-xs'
           = link_to 'Usuń', patient_card_path(patient), method: :delete, data: {confirm: 'Are you sure?'}, class: 'btn btn-danger btn-xs'
