--- a/app/views/patient_cards/show.html.haml
+++ b/app/views/patient_cards/show.html.haml
@@ -1,6 +1,34 @@
 %h1 Karta pacjenta
 .col-8
-    %p Imię: #{@patient.first_name}
-    %p Nazwisko: #{@patient.last_name}
-    %p Data urodzenia: #{@patient.date_of_birth}
-    %p Nr tel: #{@patient.phone_number}
+  %p Imię: #{@patient.first_name}
+  %p Nazwisko: #{@patient.last_name}
+  %p Data urodzenia: #{@patient.date_of_birth}
+  %p Nr tel: #{@patient.phone_number}
+%h3 Wizyty
+
+%table.table.table-hover
+  %thead
+    %tr
+      %th{:scope => "col"} #
+      %th{:scope => "col"} Data
+      %th{:scope => "col"} Komentarz
+      %th{:scope => "col"} Zalecenia
+      %th{:scope => "col"}
+  %tbody
+    - @patient.appointments.each_with_index do |appointment, index|
+      %tr
+        %th{scope: "row"}
+          = index + 1
+        %td
+          %a{href:appointment_path(appointment)}
+            = appointment.start_time
+        %td
+          %a{href:appointment_path(appointment)}
+            = appointment.private_comment
+        %td
+          %a{href:appointment_path(appointment)}
+            = appointment.public_comment
+        %td
+          = link_to 'Odwołaj wizytę',appointment_path(appointment), method: :delete, data: {confirm: 'Are you sure?'}, class: 'btn btn-danger btn-xs'
+
+          = link_to 'Edytuj', edit_appointment_path(appointment), class: 'btn btn-warning btn-xs'
