--- a/app/views/appointments/_appointment_form.html.haml
+++ b/app/views/appointments/_appointment_form.html.haml
@@ -1,5 +1,6 @@
-= simple_form_for @appointment do |f|
-  = f.input :patient_card_id, collection: @patient_cards, label_method: :last_name
+= simple_form_for @appointment, url: @url do |f|
+  - unless params[:patient_card_id]
+    = f.input :patient_card_id, collection: @patient_cards, label_method: :full_name
   = f.input :start_time
   = f.input :end_time
   = f.button :submit
