Patient card validation fix

--- a/app/views/patient_cards/index.html.haml
+++ b/app/views/patient_cards/index.html.haml
@@ -1,5 +1,5 @@
 %h1 Lista pacjentów
-
+= link_to 'Dodaj pacjenta', new_patient_card_path, class: 'btn btn-primary btn-md'
 %table.table.table-hover
   %thead
     %tr
