--- a/app/views/patient_cards/index.html.haml
+++ b/app/views/patient_cards/index.html.haml
@@ -25,4 +25,4 @@
         %td
           = link_to 'Umów wizytę',new_patient_card_appointment_path(patient), class: 'btn btn-primary btn-xs'
           = link_to 'Edytuj', edit_patient_card_path(patient), class: 'btn btn-warning btn-xs'
-          = link_to 'Usuń', patient_card_path(patient), method: :delete, data: {confirm: 'Are you sure?'}, class: 'btn btn-danger btn-xs'
+          = link_to 'Usuń', patient_card_path(patient), method: :delete, data: {confirm: 'Czy na pewno chcesz usunąc tego pacjenta??'}, class: 'btn btn-danger btn-xs'
