--- a/app/views/appointments/_appointment_form.html.haml
+++ b/app/views/appointments/_appointment_form.html.haml
@@ -1,6 +1,12 @@
 = simple_form_for @appointment, url: @url do |f|
   - unless params[:patient_card_id]
     = f.input :patient_card_id, collection: @patient_cards, label_method: :full_name
-  = f.input :start_time
-  = f.input :end_time
+  = f.input :start_time, as: :date_time_picker, input_html: { data: { date_format: "DD.MM.YYYY HH:mm",
+        date_day_view_header_format: 'MMM YYYY',
+        date_side_by_side: true,
+        date_min_date: Time.current.strftime('%Y-%m-%d') } }
+  = f.input :end_time, as: :date_time_picker, input_html: { data: { date_format: "DD.MM.YYYY HH:mm",
+        date_day_view_header_format: 'MMM YYYY',
+        date_side_by_side: true,
+        date_min_date: Time.current.strftime('%Y-%m-%d') } }
   = f.button :submit
