--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -1,12 +1,17 @@
-%nav.navbar.navbar-expand-lg.navbar-dark.bg-info
-  %a.navbar-brand{:href => root_path}
-    -# %img.d-inline-block.align-top{:alt => "", :height => "30", :src => "/docs/4.3/assets/brand/bootstrap-solid.svg", :width => "30"}/
-    Holistic
-  %button.navbar-toggler{"aria-controls" => "navbarNav", "aria-expanded" => "false", "aria-label" => "Toggle navigation", "data-target" => "#navbarNav", "data-toggle" => "collapse", :type => "button"}
-    %span.navbar-toggler-icon
-  #navbarNav.collapse.navbar-collapse
-    %ul.navbar-nav
-      %li.nav-item
-        =link_to "Pacjenci", patient_cards_path, class: 'nav-link'
-  %ul.nav.navbar-nav.navbar-right
-    =link_to "Wyloguj", destroy_user_session_path, method: :delete, class: 'btn btn-danger btn-sm'
+%nav.navbar.navbar-default
+  .container-fluid
+    / Brand and toggle get grouped for better mobile display
+    .navbar-header
+      %button.navbar-toggle.collapsed{"aria-expanded" => "false", "data-target" => "#bs-example-navbar-collapse-1", "data-toggle" => "collapse", :type => "button"}
+        %span.sr-only Toggle navigation
+        %span.icon-bar
+        %span.icon-bar
+        %span.icon-bar
+      =link_to 'Holistic', root_path, class: 'navbar-brand'
+    / Collect the nav links, forms, and other content for toggling
+    #bs-example-navbar-collapse-1.collapse.navbar-collapse
+      %ul.nav.navbar-nav
+        %li
+          =link_to "Pacjenci", patient_cards_path
+      %ul.nav.navbar-nav.navbar-right
+        =link_to "Wyloguj", destroy_user_session_path, method: :delete, class: 'btn btn-danger navbar-btn'
